# OpenGL

./: README.md  ToDo.md  clean.sh
HelloWorldGlw3/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt_glad  Makefile  clean.sh  cmake_install.cmake  download_glad.sh  generate_gl3w.sh  hello_opengl  main.cpp  main_glw3.cpp
HelloWorldGlw3/include/glad/: glad.h
HelloWorldGlw3/src/: glad.c
HelloWorldIMGui/: CMakeLists.txt  ReadMe.md  blit_example.cpp  clean.sh  face_recognition  face_recognition.cpp  imgui.ini  imgui_display.cpp  imgui_fit_window_to_image.cpp  imgui_scale_image.cpp  imgui_select_region.cpp  imgui_with_zoom.cpp  main.cpp  mat_to_texture.cpp  read_number_plate.cpp  read_number_plate_roi.cpp  read_number_plate_static.cpp  shader_example.cpp  texture_to_boundbuffer.cpp
OpenCV/: CMakeLists.txt  clean.sh  face_recognition.cpp  face_recognition_training.cpp  gesture  gesture.cpp  right.xml  take_photo.cpp
Tracker/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  clean.sh  cmake_install.cmake  main.cpp  track
